[package]
name = "bitvec-rs"
version = "0.1.3"
authors = ["Ashish Myles <marcianx@gmail.com>"]
repository = "https://github.com/marcianx/bitvec-rs"
description = """
Bit vector with guaranteed `[u8]` representation and the ability to get safe
immutable and mutable views into its internal vector for easy I/O.
"""
readme = "README.md"
keywords = ["bit", "vector", "bitvec"]
license = "MIT/Apache-2.0"

